# BookOfHoursNotebook

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  __main__.py
src/parser/: craft_parser.py
tests/: test_craft_parser.py  test_parser.py
